<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Settings">

    <LinearLayout
        android:id="@+id/viewMiddlebar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editTextIPAdresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/viewMiddlebar"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewSettingsAdresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/editTextIPAdresse"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@id/viewMiddlebar"
        android:text="@string/SettingsServerAdresse" />


    <TextView
        android:id="@+id/accoutDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSettingsAdresse"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:text="@string/Account" />

    <TextView
        android:id="@+id/accountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/textViewSettingsAdresse"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/viewMiddlebar" />

    <Button
        android:id="@+id/buttonSettingsSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountName"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_button"
        android:text="@string/SettingsSave" />

    <Button
        android:id="@+id/buttonSettingsLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/buttonSettingsSave"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_button"
        android:text="@string/logout" />
</RelativeLayout>