<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login">

    <ImageView
        android:id="@+id/backgroundImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/firstTransparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/transparent_rect"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_rect"
                    android:drawableLeft="@drawable/ic_user_icon"
                    android:drawablePadding="5dp"
                    android:drawableStart="@drawable/ic_user_icon"
                    android:hint="@string/email"
                    android:nextFocusForward="@+id/editTextPassword"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/rounded_rect"
                    android:drawableLeft="@drawable/ic_password_icon"
                    android:drawablePadding="5dp"
                    android:hint="@string/passwort"
                    android:imeOptions="actionSend"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/login_button"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/transparent_rect"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonShowCombination"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_button"
                    android:text="@string/showCombinations"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/buttonShowProducts"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/login_button"
                    android:text="@string/showProducts"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>